fixed viewprofile and editprofile, spacing nagloloko

--- a/index/public/editprofile.css
+++ b/index/public/editprofile.css
@@ -79,7 +79,7 @@ h1{
     border-radius: 50%;
     margin-bottom: 20px;
     width:250px;
-    
+    height:250px;
 }
 
 #profpicfile {
